--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.3",
+    "react-scripts": "^5.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34"
-  },
-  "devDependencies": {
-    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
